--- a/examples/mistral/mistral_lora_predict.yaml
+++ b/examples/mistral/mistral_lora_predict.yaml
@@ -1,6 +1,8 @@
 ### model
 model_name_or_path: /data/xiaoyukou/ckpts/Mistral-7B-Instruct-v0.2
-adapter_name_or_path: saves/mistral/fsdp_qlora_sft
+#adapter_name_or_path: saves/mistral/orpo_qlora/
+adapter_name_or_path: saves/mistral/orpo_qlora_continue_2
+quantization_bit: 4
 
 ### method
 stage: sft
@@ -8,7 +10,8 @@ do_predict: true
 finetuning_type: lora
 
 ### dataset
-dataset: AssetGeneration_test
+#dataset: AssetGeneration_test
+dataset: AssetGeneration_test_add_diversity
 template: mistral
 cutoff_len: 1024
 max_samples: 5000
@@ -16,9 +19,9 @@ overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: saves/mistral/fsdp_qlora_sft/predict/
+output_dir: saves/mistral/orpo_qlora_continue_2/predict_add_diversity/
 overwrite_output_dir: true
 
 ### eval
-per_device_eval_batch_size: 28
+per_device_eval_batch_size: 20
 predict_with_generate: true
