--- a/examples/mistral/mistral_orpo_qlora.yaml
+++ b/examples/mistral/mistral_orpo_qlora.yaml
@@ -1,6 +1,6 @@
 ### model
 model_name_or_path: /data/xiaoyukou/ckpts/Mistral-7B-Instruct-v0.2
-adapter_name_or_path: saves/mistral/fsdp_qlora_sft/
+#adapter_name_or_path: saves/mistral/fsdp_qlora_sft/
 quantization_bit: 4
 
 ### method
@@ -9,25 +9,28 @@ do_train: true
 finetuning_type: lora
 lora_target: q_proj,v_proj,k_proj,o_proj,gate_proj,up_proj,down_proj
 
+### ddp
+ddp_timeout: 180000000
+
 ### dataset
 dataset: AssetGeneration_orpo_train
 template: mistral
 cutoff_len: 1024
-max_samples: 80000
+max_samples: 1000000
 overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: saves/mistral/orpo_qlora_continue/
+output_dir: saves/mistral/orpo_qlora/
 logging_steps: 10
 save_steps: 500
 plot_loss: true
 overwrite_output_dir: true
 
 ### train
-per_device_train_batch_size: 18
+per_device_train_batch_size: 12
 gradient_accumulation_steps: 2
-learning_rate: 0.00005
+learning_rate: 0.0002
 num_train_epochs: 1.0
 lr_scheduler_type: cosine
 warmup_steps: 0.1
@@ -35,7 +38,7 @@ warmup_steps: 0.1
 bf16: true
 
 ### eval
-val_size: 0.005
-per_device_eval_batch_size: 32
+val_size: 0.001
+per_device_eval_batch_size: 18
 evaluation_strategy: steps
 eval_steps: 500
