--- a/examples/mistral/mistral_lora_predict.yaml
+++ b/examples/mistral/mistral_lora_predict.yaml
@@ -1,7 +1,8 @@
 ### model
 model_name_or_path: /data/xiaoyukou/ckpts/Mistral-7B-Instruct-v0.2
 #adapter_name_or_path: saves/mistral/orpo_qlora/
-adapter_name_or_path: saves/mistral/orpo_qlora_continue_2
+adapter_name_or_path: saves/mistral/orpo_qlora_continue_3
+#adapter_name_or_path: saves/mistral/fsdp_qlora_sft
 quantization_bit: 4
 
 ### method
@@ -10,8 +11,8 @@ do_predict: true
 finetuning_type: lora
 
 ### dataset
-#dataset: AssetGeneration_test
-dataset: AssetGeneration_test_add_diversity
+dataset: AssetGeneration_test
+#dataset: AssetGeneration_small_test
 template: mistral
 cutoff_len: 1024
 max_samples: 5000
@@ -19,7 +20,7 @@ overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: saves/mistral/orpo_qlora_continue_2/predict_add_diversity/
+output_dir: saves/mistral/orpo_qlora_continue_3/predict/
 overwrite_output_dir: true
 
 ### eval
