--- a/examples/phi/phi_fsdp_qlora_sft.yaml
+++ b/examples/phi/phi_fsdp_qlora_sft.yaml
@@ -1,41 +1,43 @@
 ### model
-model_name_or_path: /data/xiaoyukou/ckpts/Qwen2-7B-Instruct
-adapter_name_or_path: saves/qwen/fsdp_qlora_sft/checkpoint-1000
+model_name_or_path: /data/xiaoyukou/ckpts/Phi-3-mini-4k-instruct
 quantization_bit: 4
+quantization_method: bitsandbytes
 
 ### method
 stage: sft
 do_train: true
 finetuning_type: lora
 lora_target: all
+flash_attn: fa2
 
 ### dataset
 dataset: AssetGeneration_train
-template: qwen
+template: phi
 cutoff_len: 1024
 max_samples: 1000000
 overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: saves/qwen/fsdp_qlora_sft/
+output_dir: saves/phi/fsdp_qlora_sft/
 logging_steps: 10
 save_steps: 500
 plot_loss: true
 overwrite_output_dir: true
 
 ### train
-per_device_train_batch_size: 18
+per_device_train_batch_size: 32
 gradient_accumulation_steps: 2
 learning_rate: 0.0001
-num_train_epochs: 1.0
+num_train_epochs: 2.0
 lr_scheduler_type: cosine
 warmup_steps: 0.1
-bf16: true    # must be true for fsdp_qlora_sft
+#bf16: true    # must be true for fsdp_qlora_sft
+fp16: true
 ddp_timeout: 180000000
 
 ### eval
 val_size: 0.002
-per_device_eval_batch_size: 30
+per_device_eval_batch_size: 64
 evaluation_strategy: steps
 eval_steps: 500
