--- a/examples/mistral/mistral_qlora_sft.yaml
+++ b/examples/mistral/mistral_qlora_sft.yaml
@@ -1,6 +1,6 @@
 ### model
 model_name_or_path: /data/xiaoyukou/ckpts/Mistral-7B-Instruct-v0.2
-adapter_name_or_path: saves/mistral/qlora_sft_bitsandbytes/checkpoint-1100
+adapter_name_or_path: saves/mistral/fsdp_qlora_sft_new/
 quantization_bit: 4
 
 ### method
@@ -12,31 +12,32 @@ lora_rank: 16
 lora_dropout: 0.05
 
 ### dataset
-dataset: AssetGeneration_train
+dataset: AssetGeneration_train_add_copilot_sample
 template: mistral
 cutoff_len: 1024
-max_samples: 500000
+max_samples: 2000000
 overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: saves/mistral/qlora_sft_bitsandbytes_continue/
+output_dir: saves/mistral/qlora_sft_add_copilot_sample/
 logging_steps: 10
 save_steps: 500
 plot_loss: true
 overwrite_output_dir: true
 
 ### train
-per_device_train_batch_size: 20
+per_device_train_batch_size: 22
 gradient_accumulation_steps: 2
 learning_rate: 0.0001
 num_train_epochs: 1.0
 lr_scheduler_type: cosine
 warmup_steps: 0.1
-fp16: true
+bf16: true
+ddp_timeout: 180000000
 
 ### eval
-val_size: 0.01
+val_size: 0.001
 per_device_eval_batch_size: 32
 evaluation_strategy: steps
 eval_steps: 500
