--- a/examples/mistral/Aether_mistral_fsdp_qlora_sft.yaml
+++ b/examples/mistral/Aether_mistral_fsdp_qlora_sft.yaml
@@ -1,5 +1,5 @@
 ### model
-model_name_or_path: /data/xiaoyukou/ckpts/Mistral-7B-Instruct-v0.2
+model_name_or_path: ./ckpts/Mistral-7B-Instruct-v0.2
 quantization_bit: 4
 
 ### method
@@ -12,8 +12,7 @@ lora_target: q_proj,v_proj,k_proj,o_proj,gate_proj,up_proj,down_proj
 ddp_timeout: 180000000
 
 ### dataset
-#dataset: AssetGeneration_train
-dataset: AssetGeneration_train_add_copilot
+dataset: DataFromAether_train
 template: mistral
 cutoff_len: 1024
 max_samples: 2000000
@@ -21,20 +20,20 @@ overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: saves/mistral/fsdp_qlora_sft_add_copilot/
+output_dir: ./output/
 logging_steps: 10
 save_steps: 500
 plot_loss: true
 overwrite_output_dir: true
 
 ### train
-per_device_train_batch_size: 18
+per_device_train_batch_size: 16
 gradient_accumulation_steps: 2
 learning_rate: 0.0001
 num_train_epochs: 1.0
 lr_scheduler_type: cosine
 warmup_steps: 0.1
-bf16: true    # must be true for fsdp_qlora_sft
+fp16: true
 
 ### eval
 val_size: 0.005
