--- a/examples/mistral/mistral_lora_predict.yaml
+++ b/examples/mistral/mistral_lora_predict.yaml
@@ -1,8 +1,9 @@
 ### model
 model_name_or_path: /data/xiaoyukou/ckpts/Mistral-7B-Instruct-v0.2
-#adapter_name_or_path: saves/mistral/orpo_qlora/
-adapter_name_or_path: saves/mistral/orpo_qlora_continue_3_only_diversity
-#adapter_name_or_path: saves/mistral/fsdp_qlora_sft
+#model_name_or_path: /data/xiaoyukou/LLM_Inference/output/Mistral-7B-orpo
+#adapter_name_or_path: saves/mistral/orpo_qlora_continue_2/
+#adapter_name_or_path: saves/mistral/orpo_qlora_continue_3_only_diversity
+adapter_name_or_path: saves/mistral/fsdp_qlora_sft_new
 quantization_bit: 4
 
 ### method
@@ -20,7 +21,7 @@ overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: saves/mistral/orpo_qlora_continue_3_only_diversity/predict/
+output_dir: saves/mistral/fsdp_qlora_sft_new/predict_new/
 overwrite_output_dir: true
 
 ### eval
