--- a/examples/phi/phi_lora_predict.yaml
+++ b/examples/phi/phi_lora_predict.yaml
@@ -1,6 +1,6 @@
 ### model
-model_name_or_path: /data/xiaoyukou/ckpts/Qwen2-7B-Instruct
-adapter_name_or_path: saves/qwen/fsdp_qlora_sft/
+model_name_or_path: /data/xiaoyukou/ckpts/Phi-3-mini-4k-instruct
+adapter_name_or_path: saves/phi/fsdp_qlora_sft_new/
 quantization_bit: 4
 
 ### method
@@ -10,14 +10,14 @@ finetuning_type: lora
 
 ### dataset
 eval_dataset: AssetGeneration_test
-template: qwen
+template: phi
 cutoff_len: 1024
 max_samples: 5000
 overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: saves/qwen/fsdp_qlora_sft/predict/
+output_dir: saves/phi/fsdp_qlora_sft_new/predict/
 overwrite_output_dir: true
 
 ### eval
