--- a/examples/mistral/Aether_mistral_fsdp_qlora_sft.yaml
+++ b/examples/mistral/Aether_mistral_fsdp_qlora_sft.yaml
@@ -8,9 +8,6 @@ do_train: true
 finetuning_type: lora
 lora_target: q_proj,v_proj,k_proj,o_proj,gate_proj,up_proj,down_proj
 
-### ddp
-ddp_timeout: 180000000
-
 ### dataset
 dataset: DataFromAether_train
 template: mistral
@@ -32,8 +29,9 @@ gradient_accumulation_steps: 2
 learning_rate: 0.0001
 num_train_epochs: 1.0
 lr_scheduler_type: cosine
-warmup_steps: 0.1
+warmup_ratio: 0.1
 fp16: true
+ddp_timeout: 180000000
 
 ### eval
 val_size: 0.005
