--- a/examples/mistral/Aether_mistral_fsdp_qlora_sft.yaml
+++ b/examples/mistral/Aether_mistral_fsdp_qlora_sft.yaml
@@ -1,5 +1,5 @@
 ### model
-model_name_or_path: /tmp/llm_finetuning/Mistral-7B-Instruct-v0.2
+model_name_or_path: [Input2]
 quantization_bit: 4
 
 ### method
@@ -17,7 +17,8 @@ overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: ./output
+#output_dir: ./output
+output_dir: [Output1]
 logging_steps: 10
 save_steps: 500
 plot_loss: true
