--- a/examples/mistral/mistral_gptq.yaml
+++ b/examples/mistral/mistral_gptq.yaml
@@ -1,11 +1,11 @@
 ### model
-model_name_or_path: saves/mistral/orpo_qlora_continue_2/merge/
+model_name_or_path: saves/mistral/fsdp_qlora_sft_new/merge/
 template: mistral
 
 ### export
-export_dir: saves/mistral/orpo_qlora_continue_2/merge_gptq
+export_dir: saves/mistral/fsdp_qlora_sft_new/merge_gptq/
 export_quantization_bit: 4
-export_quantization_dataset: ./data/AssetGeneration/small_test.json
+export_quantization_dataset: data/c4_demo.json
 export_size: 2
 export_device: cpu
 export_legacy_format: false
