--- a/examples/mistral/mistral_lora_predict.yaml
+++ b/examples/mistral/mistral_lora_predict.yaml
@@ -2,8 +2,8 @@
 model_name_or_path: /data/xiaoyukou/ckpts/Mistral-7B-Instruct-v0.2
 #model_name_or_path: /data/xiaoyukou/LLM_Inference/output/Mistral-7B-orpo
 #adapter_name_or_path: saves/mistral/orpo_qlora_continue_2/
-adapter_name_or_path: saves/mistral/fsdp_qlora_sft_new/
-#adapter_name_or_path: saves/mistral/qlora_sft_add_copilot_sample
+#adapter_name_or_path: saves/mistral/fsdp_qlora_sft_new/
+adapter_name_or_path: saves/mistral/qlora_sft_add_copilot_sample
 quantization_bit: 4
 
 ### method
@@ -12,7 +12,7 @@ do_predict: true
 finetuning_type: lora
 
 ### dataset
-eval_dataset: AssetGeneration_test_add_copilot
+eval_dataset: AssetGeneration_test
 template: mistral
 cutoff_len: 1024
 max_samples: 5000
@@ -20,7 +20,7 @@ overwrite_cache: true
 preprocessing_num_workers: 16
 
 ### output
-output_dir: saves/mistral/fsdp_qlora_sft_new/predict_add_copilot/
+output_dir: saves/mistral/qlora_sft_add_copilot_sample/predict_new/
 overwrite_output_dir: true
 
 ### eval
