--- a/examples/mistral/Aether_mistral_fsdp_qlora.yaml
+++ b/examples/mistral/Aether_mistral_fsdp_qlora.yaml
@@ -1,5 +1,5 @@
 ### model
-model_name_or_path: /tmp/llm_finetuning/Mistral-7B-Instruct-v0.2/
+model_name_or_path: /tmp/llm_finetuning/model_ckpt/
 quantization_bit: 4
 
 ### method
