--- a/examples/mistral/Aether_mistral_merge_lora.yaml
+++ b/examples/mistral/Aether_mistral_merge_lora.yaml
@@ -1,7 +1,7 @@
 ### Note: DO NOT use quantized model or quantization_bit when merging lora adapters
 
 ### model
-model_name_or_path: /tmp/llm_finetuning/Mistral-7B-Instruct-v0.2/
+model_name_or_path: /tmp/llm_finetuning/model_ckpt/
 adapter_name_or_path: ./output
 template: mistral
 finetuning_type: lora
