--- a/examples/mistral/Aether_mistral_fsdp_qlora.yaml
+++ b/examples/mistral/Aether_mistral_fsdp_qlora.yaml
@@ -1,12 +1,13 @@
 ### model
 model_name_or_path: /tmp/llm_finetuning/model_ckpt/
 quantization_bit: 4
+quantization_method: bitsandbytes
 
 ### method
 stage: sft
 do_train: true
 finetuning_type: lora
-lora_target: q_proj,v_proj,k_proj,o_proj,gate_proj,up_proj,down_proj
+lora_target: all
 
 ### dataset
 dataset: AetherData_train
