--- a/examples/mistral/Aether_mistral_qlora_predict.yaml
+++ b/examples/mistral/Aether_mistral_qlora_predict.yaml
@@ -12,7 +12,7 @@ finetuning_type: lora
 eval_dataset: AetherData_test
 template: mistral
 cutoff_len: 1024
-max_samples: 2000000
+max_samples: 5000
 overwrite_cache: true
 preprocessing_num_workers: 16
 
