--- a/examples/mistral/mistral_lora_predict.yaml
+++ b/examples/mistral/mistral_lora_predict.yaml
@@ -16,7 +16,7 @@ finetuning_type: lora
 eval_dataset: AssetGeneration_test_add_copilot_10-25
 template: mistral
 cutoff_len: 1024
-max_samples: 2000000
+max_samples: 5000
 overwrite_cache: true
 preprocessing_num_workers: 16
 
