--- a/examples/mistral/Aether_mistral_fsdp_qlora.yaml
+++ b/examples/mistral/Aether_mistral_fsdp_qlora.yaml
@@ -1,12 +1,13 @@
 ### model
 model_name_or_path: /tmp/llm_finetuning/model_ckpt/
 quantization_bit: 4
-quantization_method: bitsandbytes
+trust_remote_code: true
 
 ### method
 stage: sft
 do_train: true
 finetuning_type: lora
+lora_rank: 8
 lora_target: all
 
 ### dataset
@@ -16,6 +17,7 @@ cutoff_len: 1024
 max_samples: 2000000
 overwrite_cache: true
 preprocessing_num_workers: 16
+dataloader_num_workers: 4
 
 ### output
 output_dir: ./output
@@ -23,6 +25,8 @@ logging_steps: 100
 save_steps: 2000
 plot_loss: true
 overwrite_output_dir: true
+save_only_model: false
+report_to: none  # choices: [none, wandb, tensorboard, swanlab, mlflow]
 
 ### train
 per_device_train_batch_size: 16
